--- a/scripts/install
+++ b/scripts/install
@@ -63,7 +63,7 @@ ynh_install_app_dependencies $pkg_dependencies
 ynh_script_progression --message="Configuring system user..."
 
 # Create a system user
-ynh_system_user_create --username=$app --home_dir="$final_path"
+ynh_system_user_create --username=$app #--home_dir="$final_path"
 
 #=================================================
 # DOWNLOAD, CHECK AND UNPACK SOURCE
@@ -74,10 +74,10 @@ ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source --dest_dir="$final_path"
 
-chmod 750 "$final_path"
-chmod -R o-rwx "$final_path"
-chmod -R g+rwX $final_path/{cache/,data/,pagecache/,tmp/}
-chown -R $app:www-data "$final_path"
+#chmod 750 "$final_path"
+#chmod -R o-rwx "$final_path"
+#chmod -R g+rwX $final_path/{cache/,data/,pagecache/,tmp/}
+#chown -R $app:www-data "$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
@@ -131,6 +131,16 @@ fi
 
 # Installing the config file and replace the placeholders
 ynh_add_config --template="../conf/config.json.php" --destination="$final_path/data/config.json.php"
+
+#=================================================
+# SECURE FILES AND DIRECTORIES
+#=================================================
+# set proper permissions
+ynh_script_progression --message="Securing files and directories..."
+
+chown -R $app: $final_path
+chmod -R g+rX $final_path
+chmod -R g+rwX $final_path/{cache/,data/,pagecache/,tmp/}
 
 #=================================================
 # SETUP FAIL2BAN
