Attempt to fix weird permission issues

--- a/scripts/install
+++ b/scripts/install
@@ -74,10 +74,10 @@ ynh_app_setting_set --app=$app --key=final_path --value=$final_path
 # Download, check integrity, uncompress and patch the source from app.src
 ynh_setup_source --dest_dir="$final_path"
 
-#chmod 750 "$final_path"
-#chmod -R o-rwx "$final_path"
-#chmod -R g+rwX $final_path/{cache/,data/,pagecache/,tmp/}
-#chown -R $app:www-data "$final_path"
+chmod 750 "$final_path"
+chmod -R o-rwx "$final_path"
+chmod -R u+rwX $final_path/{cache/,data/,pagecache/,tmp/}
+chown -R $app:www-data "$final_path"
 
 #=================================================
 # NGINX CONFIGURATION
