Make sure the log file is owned by shaarli so that php can write to it

--- a/scripts/install
+++ b/scripts/install
@@ -103,6 +103,7 @@ ynh_script_progression --message="Configuring log rotation..."
 # Use logrotate to manage application logfile(s)
 touch "$final_path/data/log.txt"
 ynh_use_logrotate "$final_path/data/log.txt"
+chown $app:www-data "$final_path/data/log.txt"
 
 #=================================================
 # MODIFY A CONFIG FILE
