--- a/scripts/install
+++ b/scripts/install
@@ -57,7 +57,7 @@ salt=$(php$phpversion -r 'echo sha1(uniqid("", true) ."_". mt_rand());')
 hash=$(echo -n "${password}${admin}${salt}" | sha1sum | awk '{print $1}')
 
 # Generate the API secret
-secret=$(php${YNH_PHP_VERSION} -r "echo str_shuffle(substr(hash_hmac('sha512', uniqid('${salt}'), '${admin}'), 10, 12));")
+secret=$(ynh_string_random 64)
 
 # Set default_private_links. By default, make them public if the app is public.
 if ynh_permission_has_user --permission=main --user=visitors
