--- a/scripts/install
+++ b/scripts/install
@@ -51,7 +51,7 @@ ynh_script_progression --message="Adding a configuration file..." --weight=1
 timezone=$(cat /etc/timezone)
 
 # Generate the salt
-salt=$(php$phpversion -r 'echo sha1(uniqid("", true) ."_". mt_rand());')
+salt=$(ynh_string_random 40)
 
 # Generate the hash with the password
 hash=$(echo -n "${password}${admin}${salt}" | sha1sum | awk '{print $1}')
